css/default.css
body {
	font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Ubuntu", "Lobster", Helvetica, Arial, sans-serif !important;
	font-weight: 200;
	font-size: 20px;
}

#name {
    font-family: "Lobster";
    color: #00FFFF;
}

#top {
    font-family: "Lobster";
    color: #222222;
}

#little-top {
    font-family: "Lobster";
    color: #222222;   
}

.fa-github,
.fa-twitter,
.fa-circle {
    color: #00FFFF;
}

.about-me-text {
    color: #222222;
}

#content {
    padding: 1em;
}
.parallax-background {
	background-color: #00FFFF;
	height: 620px;
	background-repeat: no-repeat;
	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
	background-size: cover;
	position: fixed;
	width: 100%;
}

.intro-text {
    font-family: "Lobster";
	font-size: 50px;
	color: #222222;
	text-align: center;
	margin-top: 15%;
}
.parallax-content {
	max-width: 100%;
	position: relative;
	top: 500px;
	font-size: 20px;
	background-color: #00FFFF;
    padding-top: 0;
    padding-left: 1em;
    padding-right: 1em;
    padding-bottom: 1em;
}              

